Remove password patch; Add xyw and height patches

--- a/dmenu/dmenu.1
+++ b/dmenu/dmenu.1
@@ -41,14 +41,35 @@ which lists programs in the user's $PATH and runs the result in their $SHELL.
 dmenu appears at the bottom of the screen.
 .TP
 .B \-f
-dmenu grabs the keyboard before reading stdin.  This is faster, but will lock up
-X until stdin reaches end\-of\-file.
+dmenu grabs the keyboard before reading stdin if not reading from a tty. This
+is faster, but will lock up X until stdin reaches end\-of\-file.
 .TP
 .B \-i
 dmenu matches menu items case insensitively.
 .TP
 .BI \-l " lines"
 dmenu lists items vertically, with the given number of lines.
+.TP
+.BI \-h " height"
+dmenu uses a menu line of at least 'height' pixels tall, but no less than 8.
+.TP
+.BI \-x " xoffset"
+dmenu is placed at this offset measured from the left side of the monitor.
+Can be negative.
+If option
+.B \-m
+is present, the measurement will use the given monitor.
+.TP
+.BI \-y " yoffset"
+dmenu is placed at this offset measured from the top of the monitor.  If the
+.B \-b
+option is used, the offset is measured from the bottom.  Can be negative.
+If option
+.B \-m
+is present, the measurement will use the given monitor.
+.TP
+.BI \-w " width"
+sets the width of the dmenu window.
 .TP
 .BI \-m " monitor"
 dmenu is displayed on the monitor number supplied. Monitor numbers are starting
@@ -106,88 +127,88 @@ Move cursor to the start of the current word
 .B Ctrl-Right
 Move cursor to the end of the current word
 .TP
-C\-a
+.B C\-a
 Home
 .TP
-C\-b
+.B C\-b
 Left
 .TP
-C\-c
+.B C\-c
 Escape
 .TP
-C\-d
+.B C\-d
 Delete
 .TP
-C\-e
+.B C\-e
 End
 .TP
-C\-f
+.B C\-f
 Right
 .TP
-C\-g
+.B C\-g
 Escape
 .TP
-C\-h
+.B C\-h
 Backspace
 .TP
-C\-i
+.B C\-i
 Tab
 .TP
-C\-j
+.B C\-j
 Return
 .TP
-C\-J
+.B C\-J
 Shift-Return
 .TP
-C\-k
+.B C\-k
 Delete line right
 .TP
-C\-m
+.B C\-m
 Return
 .TP
-C\-M
+.B C\-M
 Shift-Return
 .TP
-C\-n
+.B C\-n
 Down
 .TP
-C\-p
+.B C\-p
 Up
 .TP
-C\-u
+.B C\-u
 Delete line left
 .TP
-C\-w
+.B C\-w
 Delete word left
 .TP
-C\-y
+.B C\-y
 Paste from primary X selection
 .TP
-C\-Y
+.B C\-Y
 Paste from X clipboard
 .TP
-M\-b
+.B M\-b
 Move cursor to the start of the current word
 .TP
-M\-f
+.B M\-f
 Move cursor to the end of the current word
 .TP
-M\-g
+.B M\-g
 Home
 .TP
-M\-G
+.B M\-G
 End
 .TP
-M\-h
+.B M\-h
 Up
 .TP
-M\-j
+.B M\-j
 Page down
 .TP
-M\-k
+.B M\-k
 Page up
 .TP
-M\-l
+.B M\-l
 Down
 .SH SEE ALSO
 .IR dwm (1),
